--- a/hyprland.conf
+++ b/hyprland.conf
@@ -36,9 +36,8 @@
 # the descriptive comment above it, in case you want to revert to
 # the original default value.
 
-################
-### MONITORS ###
-################
+
+# NOTE: Monitors
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # monitor=,preferred,auto,auto
@@ -57,6 +56,15 @@ $fileManager = ghostty --title="yazi" -e yazi
 $menu = pkill fuzzel || fuzzel --terminal="ghostty -e"
 
 
+#for libadwaita gtk4 apps you can use this command:
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+#for gtk3 apps you need to install adw-gtk3 theme (in arch linux sudo pacman -S adw-gtk-theme)
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Arc-Darker"   # for GTK3 apps
+
+#for kde apps you need to install: sudo pacman -S qt5ct qt6ct kvantum kvantum breeze-icons   
+#you will need to set dark theme for qt apps from kde more difficult thans with gnome :D:
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 # Hyprland
 #################
 ### AUTOSTART ###
@@ -65,7 +73,7 @@ $menu = pkill fuzzel || fuzzel --terminal="ghostty -e"
 exec-once = syncthing
 exec-once = hyprctl dismissnotify
 exec-once = hyprpm reload -n
-# exec-once = /usr/lib/pam_kwallet_init
+exec-once = /usr/lib/pam_kwallet_init
 # exec-once = gnome-keyring-daemon --start
 exec-once = /home/mike/bin/bar -r
 exec-once = systemctl --user start hyprpolkitagent
@@ -114,13 +122,13 @@ general {
     # gaps_out	gaps between windows and monitor edges, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
     # single digit specifies that top,left,bottom,right will all have the same gaps.
     
-    border_size = 2
+    border_size = 1
 
     # disable borders for floating windows
     no_border_on_floating = false
 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 1
+    gaps_out = 3,2,4,2
     float_gaps = 5 10 15 20
 
 
@@ -151,7 +159,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 4
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -202,7 +210,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 3.5, default, slidefadevert -50%
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
@@ -283,6 +291,7 @@ bind = $mainMod, F, fullscreen
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
@@ -341,17 +350,18 @@ bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
 
 # Example special workspace (scratchpad)
-bind = ,XF86HomePage, togglespecialworkspace, notes
+bind = ,XF86HomePage, exec, create_toggle.sh -notes
 bind = $mainMod SHIFT, XF86HomePage, movetoworkspace, special:notes
 
-bind = ,, togglespecialworkspace, notes
-bind = $mainMod SHIFT, XF86HomePage, movetoworkspace, special:notes
+bind = ,XF86Mail, exec, create_toggle.sh -email
+bind = $mainMod SHIFT, XF86Mail, movetoworkspace, special:email
 
-bind = $mainMod, KP_End, togglespecialworkspace, my_yazi
+bind = $mainMod, KP_End, exec, create_toggle.sh -files
 bind = $mainMod SHIFT, KP_End, movetoworkspace, special:my_yazi
 
-bind = $mainMod, J, togglespecialworkspace, sws_music
-bind = $mainMod SHIFT, J, movetoworkspace, special:sws_music
+bind = ,XF86Tools, exec, create_toggle.sh -music
+# bind = , m, exec, smc -n 'create_toggle.sh -music'
+bind = $mainMod SHIFT, XF86Tools, movetoworkspace, special:mpdClient
 
 bind = $mainMod, G, togglespecialworkspace, gemini_win
 bind = $mainMod SHIFT, G, movetoworkspace, special:gemini_win
@@ -373,7 +383,9 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = SHIFT,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = SHIFT,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -412,18 +424,27 @@ plugin {
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
 windowrule = noblur, class:Conky
-windowrule = workspace special:sws_music silent, class:mpv
 windowrule = workspace special:gemini_win silent, title:gemini_win
 windowrule = float,title:gemini_win
 windowrule = workspace 1 silent, class:org.qutebrowser.qutebrowser
+windowrule = size 1200 1400,title:gemini_win
+# NOTE: Workspace Rules 
+windowrule = workspace special:mpdClient silent, title:mpdClient
+windowrule = float,title:mpdClient
+windowrule = size 80% 80%,title:mpdClient
+
+windowrule = workspace special:email silent, class:org.gnome.Evolution
+
+windowrule = workspace special:my_yazi silent, title:yazi
 windowrule = float,title:yazi
 windowrule = size 2200 1100,title:yazi
-windowrule = float,title:my_notes
-windowrule = size 1200 1400,title:my_notes
-windowrule = size 1200 1400,title:gemini_win
-windowrule = move 1350 32,title:my_notes
 
-
+windowrule = workspace special:notes silent, title:notes
+windowrule = size 1200 1400,title:notes
+windowrule = float,title:notes
+windowrule = float, class:Thunar
+windowrule = size 50% 50%,class:Thunar
+windowrule = move 1350 32,title:notes
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
