--- a/hyprland.conf
+++ b/hyprland.conf
@@ -31,7 +31,6 @@
 
 # So, try a command out by uncommenting the line. If you don't like
 # it, comment it out again.
-
 # for settings with numeric values, you will find the default in
 # the descriptive comment above it, in case you want to revert to
 # the original default value.
@@ -196,7 +195,6 @@ animations {
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
-
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
@@ -210,7 +208,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 3.5, default, slidefadevert -50%
+    animation = workspaces, 1, 1.25, easeOutQuint, slidefadevert -25%
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
@@ -219,7 +217,8 @@ animations {
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
 workspace = w[tv1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0        # Slide the media special workspace from the right
+workspace = special:notes, animation:slide 20%
 windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
@@ -288,6 +287,7 @@ bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod, F, fullscreen
 
+bind = , Print, exec, grimblast --freeze save output - | satty --filename -
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -349,31 +349,7 @@ bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
 bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
 
-# Example special workspace (scratchpad)
-bind = ,XF86HomePage, exec, create_toggle.sh -notes
-bind = $mainMod SHIFT, XF86HomePage, movetoworkspace, special:notes
-
-bind = ,XF86Mail, exec, create_toggle.sh -email
-bind = $mainMod SHIFT, XF86Mail, movetoworkspace, special:email
-
-bind = $mainMod, KP_End, exec, create_toggle.sh -files
-bind = $mainMod SHIFT, KP_End, movetoworkspace, special:my_yazi
-
-bind = ,XF86Tools, exec, create_toggle.sh -music
-# bind = , m, exec, smc -n 'create_toggle.sh -music'
-bind = $mainMod SHIFT, XF86Tools, movetoworkspace, special:mpdClient
-
-bind = $mainMod, G, togglespecialworkspace, gemini_win
-bind = $mainMod SHIFT, G, movetoworkspace, special:gemini_win
-
-bind = $mainMod, grave, togglespecialworkspace, what
-bind = $mainMod SHIFT, grave, movetoworkspace, special:what
-
-bind = ,XF86Calculator, togglespecialworkspace, servers
-bind = SHIFT ,XF86Calculator, togglespecialworkspace, servers
-bindr = ,XF86Calculator, togglespecialworkspace, servers
-bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
-# Scroll through existing workspaces with mainMod + scroll
+ # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
@@ -400,6 +376,7 @@ bind = $mainMod, print, exec, grim -g "$(slurp)" - | swappy -f - -o -
 
 source = ~/.config/hypr/sources/layouts.conf
 source = ~/.config/hypr/my_sources/submaps.conf
+source = ~/.config/hypr/my_sources/specialWorkspaces.conf
 
 plugin {
     split-monitor-workspaces {
@@ -421,30 +398,13 @@ plugin {
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-windowrule = noblur, class:Conky
-windowrule = workspace special:gemini_win silent, title:gemini_win
-windowrule = float,title:gemini_win
-windowrule = workspace 1 silent, class:org.qutebrowser.qutebrowser
-windowrule = size 1200 1400,title:gemini_win
 # NOTE: Workspace Rules 
-windowrule = workspace special:mpdClient silent, title:mpdClient
-windowrule = float,title:mpdClient
-windowrule = size 80% 80%,title:mpdClient
-
-windowrule = workspace special:email silent, class:org.gnome.Evolution
-
-windowrule = workspace special:my_yazi silent, title:yazi
-windowrule = float,title:yazi
-windowrule = size 2200 1100,title:yazi
-
-windowrule = workspace special:notes silent, title:notes
-windowrule = size 1200 1400,title:notes
-windowrule = float,title:notes
+# Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
 windowrule = size 50% 50%,class:Thunar
-windowrule = move 1350 32,title:notes
+windowrule = workspace 1, class:org.qutebrowser.qutebrowser
 
+windowrule = noblur, class:Conky
+windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
