--- a/hyprland.conf
+++ b/hyprland.conf
@@ -47,7 +47,6 @@ source = /home/mike/.config/hypr/monitors.conf
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-
 # Set programs that you use
 $terminal = ghostty
 $fileManager = ghostty --title="yazi" -e yazi
@@ -81,6 +80,8 @@ exec-once = copyq --start-server
 # exec-once = otd-daemon
 exec-once = swww-daemon
 exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
+exec-once = copyq
+exec-once = tmux new -s -d UTILITY
 
 ############################
 ### ENVIRONMENT VARIABLES ###
@@ -247,8 +248,8 @@ misc {
 input {
     kb_layout = us
     kb_variant =
-    kb_model =
-    kb_options = caps:swapescape
+    kb_model = XMEIDAPALM 
+    kb_options = caps:escape_shifted_capslock
     kb_rules =
     special_fallthrough = true
 
@@ -294,61 +295,74 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod SHIFT, Q, exec, /home/mike/.config/hypr/scripts/exit_script.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, J, togglesplit, # ndwindle
+bind = $mainMod SHIFT, C, centerwindow 
+
+
+bind = $mainMod Ctrl, left, movecurrentworkspacetomonitor, l
+bind = $mainMod Ctrl, right, movecurrentworkspacetomonitor, r
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-# bind = $mainMod, 1, workspace, 1
-# bind = $mainMod, 2, workspace, 2
-# bind = $mainMod, 3, workspace, 3
-# bind = $mainMod, 4, workspace, 4
-# bind = $mainMod, 5, workspace, 5
-# bind = $mainMod, 6, workspace, 6
-# bind = $mainMod, 7, workspace, 7
-# bind = $mainMod, 8, workspace, 8
-# bind = $mainMod, 9, workspace, 9
-# bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-# bind = $mainMod SHIFT, 1, movetoworkspace, 1
-# bind = $mainMod SHIFT, 2, movetoworkspace, 2
-# bind = $mainMod SHIFT, 3, movetoworkspace, 3
-# bind = $mainMod SHIFT, 4, movetoworkspace, 4
-# bind = $mainMod SHIFT, 5, movetoworkspace, 5
-# bind = $mainMod SHIFT, 6, movetoworkspace, 6
-# bind = $mainMod SHIFT, 7, movetoworkspace, 7
-# bind = $mainMod SHIFT, 8, movetoworkspace, 8
-# bind = $mainMod SHIFT, 9, movetoworkspace, 9
-# bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# https://github.com/Duckonaut/split-monitor-workspaces
-bind = $mainMod, T, split-changemonitor, next
-bind = $mainMod SHIFT, T, split-changemonitorsilent, next
+# # https://github.com/Duckonaut/split-monitor-workspaces
+# bind = $mainMod, T, split-changemonitor, next
+# bind = $mainMod SHIFT, T, split-changemonitorsilent, next
+#
+# bind = $mainMod, 1, split-workspace, 1
+# bind = $mainMod, 2, split-workspace, 2
+# bind = $mainMod, 3, split-workspace, 3
+# bind = $mainMod, 4, split-workspace, 4
+# bind = $mainMod, 5, split-workspace, 5
 
-bind = $mainMod, 1, split-workspace, 1
-bind = $mainMod, 2, split-workspace, 2
-bind = $mainMod, 3, split-workspace, 3
-bind = $mainMod, 4, split-workspace, 4
-bind = $mainMod, 5, split-workspace, 5
+bind = SUPER SHIFT, KP_End, focusworkspaceoncurrentmonitor, 1
 
-# Move active window to a workspace with mainMod + SHIFT + [0-5]
-bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
+bind = SUPER, KP_Down, focusworkspaceoncurrentmonitor, 2
 
+bind = SUPER, KP_Next, focusworkspaceoncurrentmonitor, 3
+
+bind = SUPER, KP_Left, focusworkspaceoncurrentmonitor, 4
+#
+# # Move active window to a workspace with mainMod + SHIFT + [0-5]
+# bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
+# bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
+# bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
+# bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
+# bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
+#
  # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -389,7 +403,7 @@ plugin {
 
 
 ##############################
-### WINDOWS AND WORKSPACES ###
+### fuck AND WORKSPACES ###
 ##############################
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
@@ -401,8 +415,12 @@ plugin {
 # NOTE: Workspace Rules 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
+windowrule = float, title:Save File
+windowrule = float, title:org.musicbrainz.Picard
+windowrule = size 50% 50%, title:org.musicbrainz.Picard
 windowrule = size 50% 50%,class:Thunar
 windowrule = workspace 1, class:org.qutebrowser.qutebrowser
+windowrule = monitor:DVI-D-1 special:notes, class:live_server
 
 windowrule = noblur, class:Conky
 windowrule = suppressevent maximize, class:.*
