--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -1,7 +1,10 @@
 # Example special workspace (scratchpad)
 
-bind = $mainMod, grave, togglespecialworkspace, live_server
+bind = $mainMod, grave, exec, create_toggle.sh -gg_serv
 bind = $mainMod SHIFT, grave, movetoworkspace, special:live_server
+windowrule = float,class:live_server
+windowrule = size 95% 95%,class:live_server
+windowrule = workspace special:live_server, class:live_server
 
 # servers
 bind = ,XF86Calculator, togglespecialworkspace, servers
@@ -34,10 +37,9 @@ windowrule = float,class:org.gnome.Evolution
 windowrule = move center,class:org.gnome.Evolution
 # yazi
 bind = $mainMod, KP_End, exec, create_toggle.sh -files
-
 windowrule = workspace special:my_yazi, title:yazi
 windowrule = float,title:yazi
-windowrule = size 2200 1100,title:yazi
+windowrule = size 95% 95%,title:yazi
 
 #notes
 bind = ,XF86HomePage, exec, create_toggle.sh -notes
@@ -47,5 +49,14 @@ windowrule = size 44.5% 95.5%,title:notes
 windowrule = float,title:notes
 windowrule = move 55% 3.29%,title:notes
 
-workspace = special:live_server, on-created-empty:[float] google-chrome-stable
+# copyq
+bind = , F6, exec, create_toggle.sh -copy
+windowrule = workspace special:my_copy, class:com.github.hluk.copyq
+windowrule = float,class:com.github.hluk.copyq
+windowrule = size 95% 95%,class:com.github.hluk.copyq
 
+# drop down terminal
+bind = $mainMod, F6, exec, create_toggle.sh -term_util
+windowrule = workspace special:term_util, title:term_util
+windowrule = float,title:term_util
+windowrule = size 95% 95%,title:term_util
