--- a/my_sources/submaps.conf
+++ b/my_sources/submaps.conf
@@ -42,10 +42,22 @@ submap = resize
 
 # sets repeatable binds for resizing the active window
 binde = , right, resizeactive, 10 0
+binde = , right, centerwindow
 binde = , left, resizeactive, -10 0
+binde = , left, centerwindow
 binde = , up, resizeactive, 0 -10
+binde = , up, centerwindow
 binde = , down, resizeactive, 0 10
+binde = , down, centerwindow
 
+binde = , l, resizeactive, 100 0
+binde = , l, centerwindow
+binde = , h, resizeactive, -100 0
+binde = , h, centerwindow
+binde = , k, resizeactive, 0 -100
+binde = , k, centerwindow
+binde = , j, resizeactive, 0 100
+binde = , j, centerwindow
 # use reset to go back to the global submap
 bind = , escape, submap, reset
 
