--- a/hyprland.conf
+++ b/hyprland.conf
@@ -178,8 +178,19 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 14
+        passes = 3
+		xray = true
+		ignore_opacity = false
+		special = false
+		popups = true
+		popups_ignorealpha = 0.6
+		new_optimizations = true
+		brightness = 1
+		noise = 0.2
+		contrast = 1
+		input_methods = true
+		input_methods_ignorealpha = 0.8
 
         vibrancy = 0.1696
     }
@@ -263,9 +274,9 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -287,8 +298,12 @@ bind = $mainMod, SPACE, exec, $bin/bar -s
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, L, exec, hyprlock
 
-bind = , Print, exec, grimblast --freeze save output - | satty --filename -
+# bind = , Print, exec, grimblast --freeze save output - | satty --filename -
+# Screenshot region and pipe to swappy for editing
+bind = ,Print, exec, hyprshot -m region --raw | swappy -f -
+
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -324,7 +339,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -402,6 +416,7 @@ plugin {
 }
 
 
+
 ##############################
 ### fuck AND WORKSPACES ###
 ##############################
@@ -413,6 +428,7 @@ plugin {
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # NOTE: Workspace Rules 
+# workspace = special:mpdClient, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = float, class:Thunar
 windowrule = float, title:Save File
