--- a/main.conf
+++ b/main.conf
@@ -31,14 +31,12 @@
 
 # So, try a command out by uncommenting the line. If you don't like
 # it, comment it out again.
-
 # for settings with numeric values, you will find the default in
 # the descriptive comment above it, in case you want to revert to
 # the original default value.
 
-################
-### MONITORS ###
-################
+
+# NOTE: Monitors
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # monitor=,preferred,auto,auto
@@ -49,24 +47,31 @@ source = /home/mike/.config/hypr/monitors.conf
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-
 # Set programs that you use
 $terminal = ghostty
-$fileManager = ghostty -e yazi
+$fileManager = ghostty --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
 $menu = pkill fuzzel || fuzzel --terminal="ghostty -e"
 
 
+#for libadwaita gtk4 apps you can use this command:
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+#for gtk3 apps you need to install adw-gtk3 theme (in arch linux sudo pacman -S adw-gtk-theme)
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Arc-Darker"   # for GTK3 apps
+
+#for kde apps you need to install: sudo pacman -S qt5ct qt6ct kvantum kvantum breeze-icons   
+#you will need to set dark theme for qt apps from kde more difficult thans with gnome :D:
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 # Hyprland
 #################
 ### AUTOSTART ###
 #################
 
-# exec-once = hyprpanel
-exec-once = dunst
+exec-once = syncthing
 exec-once = hyprctl dismissnotify
 exec-once = hyprpm reload -n
-# exec-once = /usr/lib/pam_kwallet_init
+exec-once = /usr/lib/pam_kwallet_init
 # exec-once = gnome-keyring-daemon --start
 exec-once = /home/mike/bin/bar -r
 exec-once = systemctl --user start hyprpolkitagent
@@ -75,6 +80,8 @@ exec-once = copyq --start-server
 # exec-once = otd-daemon
 exec-once = swww-daemon
 exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
+exec-once = copyq
+exec-once = tmux new -s -d UTILITY
 
 ############################
 ### ENVIRONMENT VARIABLES ###
@@ -115,13 +122,13 @@ general {
     # gaps_out	gaps between windows and monitor edges, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
     # single digit specifies that top,left,bottom,right will all have the same gaps.
     
-    border_size = 2
+    border_size = 1
 
     # disable borders for floating windows
     no_border_on_floating = false
 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 1
+    gaps_out = 3,2,4,2
     float_gaps = 5 10 15 20
 
 
@@ -152,7 +159,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 4
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -171,8 +178,19 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 14
+        passes = 3
+		xray = true
+		ignore_opacity = false
+		special = false
+		popups = true
+		popups_ignorealpha = 0.6
+		new_optimizations = true
+		brightness = 1
+		noise = 0.2
+		contrast = 1
+		input_methods = true
+		input_methods_ignorealpha = 0.8
 
         vibrancy = 0.1696
     }
@@ -189,7 +207,6 @@ animations {
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
-
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
@@ -203,7 +220,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 1.25, easeOutQuint, slidefadevert -25%
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
@@ -212,7 +229,8 @@ animations {
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
 workspace = w[tv1], gapsout:0, gapsin:0
-workspace = f[1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0        # Slide the media special workspace from the right
+workspace = special:notes, animation:slide 20%
 windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
@@ -241,8 +259,8 @@ misc {
 input {
     kb_layout = us
     kb_variant =
-    kb_model =
-    kb_options = caps:swapescape
+    kb_model = XMEIDAPALM 
+    kb_options = caps:escape_shifted_capslock
     kb_rules =
     special_fallthrough = true
 
@@ -256,9 +274,9 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -280,84 +298,86 @@ bind = $mainMod, SPACE, exec, $bin/bar -s
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, L, exec, hyprlock
+
+# bind = , Print, exec, grimblast --freeze save output - | satty --filename -
+# Screenshot region and pipe to swappy for editing
+bind = ,Print, exec, hyprshot -m region --raw | swappy -f -
 
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod Alt, KP_End, exec, thunar
 bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod SHIFT, Q, exec, /home/mike/.config/hypr/scripts/exit_script.sh
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, J, togglesplit, # ndwindle
+bind = $mainMod SHIFT, C, centerwindow 
+
+
+bind = $mainMod Ctrl, left, movecurrentworkspacetomonitor, l
+bind = $mainMod Ctrl, right, movecurrentworkspacetomonitor, r
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-# bind = $mainMod, 1, workspace, 1
-# bind = $mainMod, 2, workspace, 2
-# bind = $mainMod, 3, workspace, 3
-# bind = $mainMod, 4, workspace, 4
-# bind = $mainMod, 5, workspace, 5
-# bind = $mainMod, 6, workspace, 6
-# bind = $mainMod, 7, workspace, 7
-# bind = $mainMod, 8, workspace, 8
-# bind = $mainMod, 9, workspace, 9
-# bind = $mainMod, 0, workspace, 10
-
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-# bind = $mainMod SHIFT, 1, movetoworkspace, 1
-# bind = $mainMod SHIFT, 2, movetoworkspace, 2
-# bind = $mainMod SHIFT, 3, movetoworkspace, 3
-# bind = $mainMod SHIFT, 4, movetoworkspace, 4
-# bind = $mainMod SHIFT, 5, movetoworkspace, 5
-# bind = $mainMod SHIFT, 6, movetoworkspace, 6
-# bind = $mainMod SHIFT, 7, movetoworkspace, 7
-# bind = $mainMod SHIFT, 8, movetoworkspace, 8
-# bind = $mainMod SHIFT, 9, movetoworkspace, 9
-# bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# https://github.com/Duckonaut/split-monitor-workspaces
-bind = $mainMod, T, split-changemonitor, next
-bind = $mainMod SHIFT, T, split-changemonitorsilent, next
+# # https://github.com/Duckonaut/split-monitor-workspaces
+# bind = $mainMod, T, split-changemonitor, next
+# bind = $mainMod SHIFT, T, split-changemonitorsilent, next
+#
+# bind = $mainMod, 1, split-workspace, 1
+# bind = $mainMod, 2, split-workspace, 2
+# bind = $mainMod, 3, split-workspace, 3
+# bind = $mainMod, 4, split-workspace, 4
+# bind = $mainMod, 5, split-workspace, 5
 
-bind = $mainMod, 1, split-workspace, 1
-bind = $mainMod, 2, split-workspace, 2
-bind = $mainMod, 3, split-workspace, 3
-bind = $mainMod, 4, split-workspace, 4
-bind = $mainMod, 5, split-workspace, 5
+bind = SUPER SHIFT, KP_End, focusworkspaceoncurrentmonitor, 1
 
-# Move active window to a workspace with mainMod + SHIFT + [0-5]
-bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
+bind = SUPER, KP_Down, focusworkspaceoncurrentmonitor, 2
 
-# Example special workspace (scratchpad)
-bind = ,XF86HomePage, togglespecialworkspace, notes
-bindo = ,XF86HomePage, togglespecialworkspace, notes
-bindr = ,XF86HomePage, togglespecialworkspace, notes
-bind = $mainMod SHIFT, XF86HomePage, movetoworkspace, special:notes
+bind = SUPER, KP_Next, focusworkspaceoncurrentmonitor, 3
 
-bind = $mainMod, KP_End, togglespecialworkspace, my_yazi
-bind = $mainMod SHIFT, KP_End, movetoworkspace, special:my_yazi
-
-bind = $mainMod, grave, togglespecialworkspace, what
-bind = $mainMod SHIFT, grave, movetoworkspace, special:what
-
-bind = ,XF86Calculator, togglespecialworkspace, servers
-bind = SHIFT ,XF86Calculator, togglespecialworkspace, servers
-bindr = ,XF86Calculator, togglespecialworkspace, servers
-bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
-# Scroll through existing workspaces with mainMod + scroll
+bind = SUPER, KP_Left, focusworkspaceoncurrentmonitor, 4
+#
+# # Move active window to a workspace with mainMod + SHIFT + [0-5]
+# bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
+# bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
+# bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
+# bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
+# bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
+#
+ # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
@@ -367,7 +387,9 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = SHIFT,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = SHIFT,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -382,6 +404,7 @@ bind = $mainMod, print, exec, grim -g "$(slurp)" - | swappy -f - -o -
 
 source = ~/.config/hypr/sources/layouts.conf
 source = ~/.config/hypr/my_sources/submaps.conf
+source = ~/.config/hypr/my_sources/specialWorkspaces.conf
 
 plugin {
     split-monitor-workspaces {
@@ -394,7 +417,7 @@ plugin {
 
 
 ##############################
-### WINDOWS AND WORKSPACES ###
+### fuck AND WORKSPACES ###
 ##############################
 
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
@@ -403,12 +426,17 @@ plugin {
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
+# NOTE: Workspace Rules 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = float, class:Thunar
+windowrule = float, title:Save File
+windowrule = float, title:org.musicbrainz.Picard
+windowrule = size 50% 50%, title:org.musicbrainz.Picard
+windowrule = size 50% 50%,class:Thunar
+windowrule = workspace 1, class:org.qutebrowser.qutebrowser
+windowrule = monitor:DVI-D-1 special:notes, class:live_server
+
 windowrule = noblur, class:Conky
-windowrule = workspace special:notes silent, class:Conky
-windowrule = workspace 1 silent, class:org.qutebrowser.qutebrowser
-
-
+windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
