--- a/my_sources/specialWorkspaces.conf
+++ b/my_sources/specialWorkspaces.conf
@@ -13,11 +13,8 @@ bindr = ,XF86Calculator, togglespecialworkspace, servers
 bind = $mainMod SHIFT, XF86Calculator, movetoworkspace, special:servers
 
 # music
-bind = ,XF86Tools, exec, create_toggle.sh -music
-
-windowrule = workspace special:mpdClient, title:mpdClient
-windowrule = float,title:mpdClient
-windowrule = size 80% 80%,title:mpdClient
+workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] ghostty --title='mpdClient' -e ncmpcpp --host localhost
+bind = ,XF86Tools, togglespecialworkspace, mpdClient
 
 # gemini-cli
 bind = $mainMod, G, togglespecialworkspace, gemini_win
