--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -4,6 +4,7 @@
     // "position": "bottom", // Waybar position (top|bottom|left|right)
     "reload_style_on_change": true,
     "output": "HDMI-A-1",
+    "layer": "bottom",
     "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
